--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Document</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
     <h1>Make Your <br> <span>Card...</span></h1>
   <main>
@@ -18,7 +17,9 @@
         <h4 id="downbtn">↓</h4>
       </div>
 
-      <div class="container"></div>
+      <div class="container">
+
+      </div>
     </div>
 
     <div id="form" class="form-container">
